Fix nav items alignment

--- a/app/Resources/static/themes/material/css/media_queries.scss
+++ b/app/Resources/static/themes/material/css/media_queries.scss
@@ -42,6 +42,10 @@
     padding-right: 0.75rem;
   }
 
+  .nav-panel-top {
+    padding: 6px 0;
+  }
+
   .nav-panel-buttom {
     justify-content: space-between;
   }
